[package]
name = "ffmpeg_driver"
version = "0.3.0"
edition = "2021"

default-run = "ffmpeg_driver"

[features]
pipe_test = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ffmpeg_driver"
doc = true

[[bin]]
name = "pipe_test"
required-features = ["pipe_test"]

[dependencies]
clap = {version="4", features=["cargo"]}
